Fix for system date update functionality